# Aether

app/: CMakeLists.txt
app/EtherCAT_Slave/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.c
app/Hello/: CMakeCache.txt  CMakeLists.txt
app/Hello_RISCV/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.c
app/SSC_8IO_Application/: 8IO.esp  8IO.xlsx  main.c
app/SSC_8IO_Application/Config/: ZLG_DPORT_SSC_Config.xml
app/SSC_8IO_Application/ESI/: 8IO.xml
app/Serial/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.c
arch/arm/arm-v7m/cortex-m3/: cortex-m3.cmake  cortex_m3_startup_gcc.s
arch/arm/arm-v7m/cortex-m4/: cortex-m4.cmake
arch/riscv/hpm/: riscv.cmake
arch/riscv/hpm/toolchains/: reset.c
arch/riscv/hpm/toolchains/gcc/: stdio_weak.c
arch/riscv/l1c/: hpm_l1c_drv.c
board/: CMakeLists.txt
board/stm32f103_ethercat/bsp/: esc_gpio.c
board/stm32f103_ethercat/bsp/spi/: stm32f103_ethercat_spi.c
component/: CMakeLists.txt
component/debug/: serial_debug.c  serial_debug.h
component/ssc/: ssc_adapter.c  ssc_adapter.h
drivers/: CMakeLists.txt
drivers/Common_Drivers/ET1100/: et1100.c  et1100.h
subsys/spi_hal/: subsys_spi.c  subsys_spi.h
subsys/uart_hal/: subsys_uart.c  subsys_uart.h
